backend/deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentservice-ingress
  namespace: deployments
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/limit-connections: '10'
    nginx.ingress.kubernetes.io/limit-rps: '100'
    nginx.ingress.kubernetes.io/limit-burst: '200'
    nginx.ingress.kubernetes.io/limit-rate: '50'
    nginx.ingress.kubernetes.io/limit-requests: '100'
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/session-cookie-name: 'INGRESSCOOKIE'
    nginx.ingress.kubernetes.io/session-cookie-expires: '2592000'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '2592000'
    nginx.ingress.kubernetes.io/proxy-cookie-path: '/; Secure; SameSite=None'
    nginx.ingress.kubernetes.io/proxy-cookie-domain: 'conceptocar.xyz $host'

    nginx.ingress.kubernetes.io/limit-req-status: '429'
    nginx.ingress.kubernetes.io/limit-req-zone: 'req_limit_per_ip'

    nginx.ingress.kubernetes.io/enable-access-log: 'true'

    nginx.ingress.kubernetes.io/enable-real-ip: 'true'
    nginx.ingress.kubernetes.io/proxy-real-ip-cidr: '192.168.0.0/16, 10.0.0.0/8, 130.211.0.0/22, 35.191.0.0/16'

    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/use-forwarded-headers: 'true'

spec:
  tls:
    - hosts:
        - backend-tests.conceptocar.xyz
      secretName: backend-tests-tls
  rules:
    - host: backend-tests.conceptocar.xyz
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: authentservice
                port:
                  number: 80
          - path: /keys(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: keyservice
                port:
                  number: 80
          - path: /products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: productservice
                port:
                  number: 80
